--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Hi, I'm Varsha!
-I'll be right back. 
+<p> Hi, I'm Varsha! </p>
+<p> I'll be right back. </p>
+<p> Get in touch: varshasivaram@uchicago.edu </p>
 
-Get in touch: varshasivaram@uchicago.edu
