--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Hi, this is Varsha Sivaram</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>I'm building this website at the moment.<br />
+								Wanna chat? Write to me at varshasivaram@uchicago.edu</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">My work</a></li>
 								</ul>
 							</div>
 						</div>
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Resumé</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -74,7 +74,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Interests</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Work Experience</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Projects</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="landing.html" class="link">Pix</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">Values</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
@@ -212,4 +212,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
